--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </button>
 
                     <a class="navbar-brand" href="#">
-                        <img src="./images/site_logo.jpg" class="logo" alt="">
+                        <img src="./images/undraw_taking-selfie_2b1d.svg" class="logo" alt="">
                     </a>
 
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
@@ -138,7 +138,7 @@
 
     <!-- =================================  =================================== -->
 
-    <section id="scope" class="py-5 part3">
+    <section id="scope" class="py-6 part3">
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-12 col-md-1">
@@ -218,7 +218,7 @@
 
     <!-- =================================  =================================== -->
 
-    <section id="" class="p-2 p-md-5 part5">
+    <section id="" class="pt-5  part5">
         <div class="container bg-dark px-md-5 rounded rounded-5 ">
             <div class="row g-2">
                 <div class="col-md-3 offset-1 img_container ">
@@ -269,7 +269,7 @@
 
     <!-- =================================  =================================== -->
 
-    <footer class="py-5 ">
+    <footer class="py-4 ">
         <div class="container footer">
             <h6>با ما در ارتباط باشید</h6>
             <div class="icons">
