--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,user-scalable=no">
     <meta name="author" content="mina nastaran">
     <meta name="description" content="">
     <meta name="keywords" content="برندینگ , توسعه کسب و کار">
@@ -164,7 +164,7 @@
                     <p class="part3__text">
                         در زمینه املاک مشاور به کسی می‌گویند که در زمینه خرید، فروش، اجاره و رهن املاک و مستغلات تخصص
                         دارد و به عنوان واسطه بین خریدار و فروشنده یا موجر و مستاجر عمل می‌کند. آن‌ها با شناخت عمیق از
-                        بازار و اقتصاد مسکن، به
+                   
                     </p>
                 </div>
                 <div class="col-12 col-md-1">
